# mdx

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG-collapse.md  CHANGELOG.md  Cargo.toml  FIXES-SUMMARY.md  README.md  VERIFICATION-COMPLETE.md  mdx-plan.md  review.md  sec-review.md  test-diff.md  test-formatting.md  test-table.md  test-toc-collapse.md
.beads/: issues.jsonl  metadata.json
.github/workflows/: release.yaml
docs/: mdx-spec.md  scrolling.md
mdx/: Cargo.toml
mdx-core/: Cargo.toml
mdx-core/src/: config.rs  diff.rs  doc.rs  front_matter.rs  git.rs  image.rs  lib.rs  security.rs  selection.rs  toc.rs
mdx-tui/: Cargo.toml
mdx-tui/src/: app.rs  collapse.rs  diff_worker.rs  editor.rs  event.rs  image_backend.rs  image_cache.rs  input.rs  iterm2_graphics.rs  kitty_graphics.rs  lib.rs  line_layout.rs  options_dialog.rs  panes.rs  render.rs  scroll_math.rs  sixel_graphics.rs  terminal.rs  theme.rs  ui.rs  watcher.rs
mdx-tui/tests/: integration_tests.rs  scroll_harness.rs
mdx/src/: main.rs
plans/: 20260127-rendering.md  collapse.md  inline-images-plan.md  inline-images.md  mouse.md
scripts/: install.ps1  install.sh
test-docs/: collapse-demo.md
