[package]
name = "mdx-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["clipboard", "watch", "git"]
clipboard = ["dep:arboard"]
watch = ["dep:notify"]
git = ["dep:similar", "dep:gix", "dep:bstr"]
images = ["dep:image", "dep:blake3", "dep:resvg"]

[dependencies]
# Core text handling
ropey = { workspace = true }
pulldown-cmark = { workspace = true }

# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Platform config directories
directories = { workspace = true }

# Optional: Clipboard
arboard = { workspace = true, optional = true }

# Optional: File watching
notify = { workspace = true, optional = true }

# Optional: Git diff
similar = { workspace = true, optional = true }
gix = { workspace = true, optional = true }
bstr = { workspace = true, optional = true }

# Optional: Images
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }
blake3 = { version = "1.5", optional = true }
resvg = { version = "0.44", optional = true, default-features = false }

[dev-dependencies]
tempfile = "3.14"
