[package]
name = "mdx-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["clipboard", "watch", "git"]
clipboard = ["mdx-core/clipboard", "dep:arboard"]
watch = ["mdx-core/watch", "dep:notify"]
git = ["mdx-core/git"]
images = ["mdx-core/images", "dep:image", "dep:blake3", "dep:resvg", "dep:reqwest"]

[dependencies]
# Core crate
mdx-core = { path = "../mdx-core" }

# Terminal UI
ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
tui-markdown = { workspace = true }
pulldown-cmark = { workspace = true }

# Event bus
crossbeam-channel = { workspace = true }

# LRU cache
lru = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Clipboard (optional)
arboard = { workspace = true, optional = true }

# File watching (optional)
notify = { workspace = true, optional = true }

# Image decoding (optional)
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }
blake3 = { version = "1.5", optional = true }
resvg = { version = "0.44", optional = true, default-features = false }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.14"
