[package]
name = "mdx-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["clipboard", "watch", "git"]
clipboard = ["mdx-core/clipboard", "dep:arboard"]
watch = ["mdx-core/watch", "dep:notify"]
git = ["mdx-core/git"]
images = ["mdx-core/images", "dep:imagesize"]

[dependencies]
# Core crate
mdx-core = { path = "../mdx-core" }

# Terminal UI
ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
tui-markdown = { workspace = true }
pulldown-cmark = { workspace = true }

# Event bus
crossbeam-channel = { workspace = true }

# LRU cache
lru = { workspace = true }

# Error handling
anyhow = { workspace = true }
log = { workspace = true }

# Clipboard (optional)
arboard = { workspace = true, optional = true }

# File watching (optional)
notify = { workspace = true, optional = true }

# Image metadata reading (optional)
imagesize = { version = "0.14", optional = true }

[dev-dependencies]
tempfile = "3.14"
