[package]
name = "mdx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["clipboard", "watch", "git", "images"]
clipboard = ["mdx-tui/clipboard"]
watch = ["mdx-tui/watch"]
git = ["mdx-tui/git"]
images = ["mdx-tui/images"]

[dependencies]
# Local crates
mdx-core = { path = "../mdx-core" }
mdx-tui = { path = "../mdx-tui" }

# CLI parsing
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }
env_logger = { workspace = true }
